Fixed Reviews on IE

--- a/src/components/Reviews/Reviews.styl
+++ b/src/components/Reviews/Reviews.styl
@@ -115,7 +115,7 @@
 
 		img {
 			display block
-			width 100%	
+			width auto	
 		}
 	}
 
